feat: Weather obelisk